--- a/include/preamble.tex
+++ b/include/preamble.tex
@@ -15,6 +15,17 @@
 % Hyperlinks
 \usepackage{hyperref}
 
+% Diagrams
+\usepackage{tikz}
+\usetikzlibrary{positioning, fit}
+
+% ---------------------------
+% Random number generation
+\usepackage[first=-100, last=100]{lcg}
+
+% For loop
+\usepackage{pgffor}
+
 % ---------------------------
 % Sub-documents
 \usepackage{subfiles}
