Progress on slides

--- a/include/preamble.tex
+++ b/include/preamble.tex
@@ -8,6 +8,7 @@
 % ---------------------------
 % Code listings
 \usepackage{listings}
+\usepackage{listings-rust}
 
 % Math support
 \usepackage{amsmath}
@@ -17,7 +18,7 @@
 
 % Diagrams
 \usepackage{tikz}
-\usetikzlibrary{positioning, fit}
+\usetikzlibrary{positioning, matrix, fit, trees, automata, calc}
 
 % ---------------------------
 % Random number generation
