Progress on slides

--- a/include/preamble.tex
+++ b/include/preamble.tex
@@ -6,6 +6,10 @@
 \usepackage{fontspec}
 
 % ---------------------------
+% Colors
+\usepackage{xcolor}
+\usepackage{colortbl}
+
 % Code listings
 \usepackage{listings}
 \usepackage{listings-rust}
